# ML_Starter

./: README.md  pyproject.toml
notebooks/: full_sk_pipe.ipynb  iris.ipynb  kaggle_titanic.ipynb  penguins.ipynb  regression_example.ipynb  titanic.ipynb  titanic_naive_method.ipynb
src/: utility.py
