[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-starter"                     # nom unique sur PyPI
version = "0.1.0"                       # incrémentez à chaque release
description = "Utilities for Machine Learning"
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name="Votre Nom", email="vous@example.com" }
]
license = { text="MIT" }
dependencies = [
  "numpy>=1.20",
  "scikit-learn>=1.0"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["src"]
